--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^5.2.0",
     "core-js": "^2.4.1",
     "fullpage.js": "^2.9.7",
+    "modernizr": "^3.6.0",
     "npm": "^6.1.0",
     "rxjs": "^5.5.6",
     "slick-carousel": "^1.8.1",
