--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "babel-polyfill": "^6.26.0",
+    "classlist.js": "^1.1.20150312",
     "core-js": "^2.4.1",
     "fullpage.js": "^2.9.7",
     "modernizr": "^3.6.0",
     "npm": "^6.1.0",
     "rxjs": "^5.5.6",
     "slick-carousel": "^1.8.1",
+    "web-animations-js": "^2.3.1",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
