Form & Mobile menu modifications

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-polyfill": "^6.26.0",
     "classlist.js": "^1.1.20150312",
     "core-js": "^2.4.1",
+    "createjs": "^1.0.1",
     "fullpage.js": "^2.9.7",
     "modernizr": "^3.6.0",
     "npm": "^6.1.0",
